<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>cn.bugstack.ai</groupId>
  <artifactId>ai-agent-scaffold-draw-io</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>
  <repositories>
    <repository>
      <id>nexus-aliyun</id>
      <name>nexus-aliyun</name>
      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
      <releases/>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <google.adk.version>1.7.0</google.adk.version>
  </properties>
  <developers>
    <developer>
      <name>xiaofuge</name>
      <email>184172133@qq.com</email>
      <organization>fuzhengwei</organization>
      <organizationUrl>https://github.com/fuzhengwei</organizationUrl>
    </developer>
  </developers>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.2</version>
  </parent>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.mybatis.spring.boot</groupId>
        <artifactId>mybatis-spring-boot-starter</artifactId>
        <version>3.0.4</version>
      </dependency>
      <!-- # 多数据源路由配置
                 # mysql 5.x driver-class-name: com.mysql.jdbc.Driver    mysql-connector-java 5.1.34
                 # mysql 8.x driver-class-name: com.mysql.cj.jdbc.Driver mysql-connector-java 8.0.22-->
      <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>8.0.28</version>
      </dependency>
      <dependency>
        <groupId>com.alibaba</groupId>
        <artifactId>fastjson</artifactId>
        <version>2.0.28</version>
      </dependency>
      <dependency>
        <groupId>org.xerial</groupId>
        <artifactId>sqlite-jdbc</artifactId>
        <version>3.50.3.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.9</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>32.1.3-jre</version>
      </dependency>
      <dependency>
        <groupId>dom4j</groupId>
        <artifactId>dom4j</artifactId>
        <version>1.6.1</version>
      </dependency>
      <dependency>
        <groupId>com.thoughtworks.xstream</groupId>
        <artifactId>xstream</artifactId>
        <version>1.4.10</version>
      </dependency>
      <dependency>
        <groupId>io.jsonwebtoken</groupId>
        <artifactId>jjwt</artifactId>
        <version>0.9.1</version>
      </dependency>
      <dependency>
        <groupId>com.auth0</groupId>
        <artifactId>java-jwt</artifactId>
        <version>4.4.0</version>
      </dependency>
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.15</version>
      </dependency>
      <dependency>
        <groupId>com.google.adk</groupId>
        <artifactId>google-adk</artifactId>
        <version>${google.adk.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.adk</groupId>
        <artifactId>google-adk-dev</artifactId>
        <version>${google.adk.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.adk.samples</groupId>
        <artifactId>google-adk-sample-helloworld</artifactId>
        <version>${google.adk.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.adk</groupId>
        <artifactId>google-adk-contrib-langchain4j</artifactId>
        <version>0.2.0</version>
      </dependency>
      <!--            <dependency>-->
      <!--                <groupId>dev.langchain4j</groupId>-->
      <!--                <artifactId>langchain4j-core</artifactId>-->
      <!--                <version>1.4.0</version>-->
      <!--            </dependency>-->
      <!--            <dependency>-->
      <!--                <groupId>dev.langchain4j</groupId>-->
      <!--                <artifactId>langchain4j-open-ai</artifactId>-->
      <!--                <version>1.4.0</version>-->
      <!--            </dependency>-->
      <!-- langchain4j https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-bom -->
      <dependency>
        <groupId>dev.langchain4j</groupId>
        <artifactId>langchain4j-bom</artifactId>
        <version>1.4.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- 工程模块 -->
      <dependency>
        <groupId>cn.bugstack.ai</groupId>
        <artifactId>ai-agent-scaffold-draw-io-api</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>cn.bugstack.ai</groupId>
        <artifactId>ai-agent-scaffold-draw-io-domain</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>cn.bugstack.ai</groupId>
        <artifactId>ai-agent-scaffold-draw-io-infrastructure</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>cn.bugstack.ai</groupId>
        <artifactId>ai-agent-scaffold-draw-io-types</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>cn.bugstack.ai</groupId>
        <artifactId>ai-agent-scaffold-draw-io-trigger</artifactId>
        <version>1.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <!-- maven 脚手架 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-archetype-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <outputDirectory>${project.build.directory}/ai-agent-scaffold-lite-archetype</outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
          <parameters>true</parameters>
          <release>${java.version}</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.7</version>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>dev</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <java_jvm>-Xms1G -Xmx1G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=dev -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-agent-scaffold-lite-boot -Xloggc:/export/Logs/ai-agent-scaffold-lite-boot/gc-ai-agent-scaffold-lite-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
        <profileActive>dev</profileActive>
      </properties>
    </profile>
    <profile>
      <id>test</id>
      <properties>
        <java_jvm>-Xms1G -Xmx1G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=test -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-agent-scaffold-lite-boot -Xloggc:/export/Logs/ai-agent-scaffold-lite-boot/gc-ai-agent-scaffold-lite-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
        <profileActive>test</profileActive>
      </properties>
    </profile>
    <profile>
      <id>prod</id>
      <properties>
        <java_jvm>-Xms6G -Xmx6G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=release -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/fq-mall-activity-app -Xloggc:/export/Logs/ai-agent-scaffold-lite-boot/gc-ai-agent-scaffold-lite-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
        <profileActive>prod</profileActive>
      </properties>
    </profile>
  </profiles>
  <modules>
    <module>ai-agent-scaffold-draw-io-api</module>
    <module>ai-agent-scaffold-draw-io-app</module>
    <module>ai-agent-scaffold-draw-io-domain</module>
    <module>ai-agent-scaffold-draw-io-trigger</module>
    <module>ai-agent-scaffold-draw-io-infrastructure</module>
    <module>ai-agent-scaffold-draw-io-types</module>
  </modules>
</project>
